tests/parse-error/c_string_literal_byte_nul/input.rs
fn a() {
	let _ = c"\0";
}
